# torch-host

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doit.sh
plugin/: CMakeLists.txt
plugin/source/: NeuralNetwork.cpp  NeuralNetwork.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
